--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
     <p>Hallo!</p>
 </body>
 <a href="folder/overmij.html">naar overmij</a>
+<a href="folder/BSA.html">BSA</a>
 
 </html>
