verbetering in code

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <p>Hallo!</p>
-</body>
-<a href="folder/overmij.html">naar overmij</a>
-<a href="folder/BSA.html">BSA</a>
 
+<p><a href="folder/overmij.html">naar overmij</a></p>
+<p><a href="folder/BSA.html">BSA</a></p>
+</body>
 </html>
